# nanotest

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  meson.build
.github/workflows/: auto-release.yaml  clang-format-check.yml
example/: example_functions.h  example_tests.c
include/: lib.h  unstdtest.h
src/: lib.h
